# DeepView

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  install.py  log.txt  manage.py  pyproject.toml  run.py  run_log.txt
.github/workflows/: cd.yaml  pr_approval.yaml
DeepView/: asgi.py  settings.py  urls.py  wsgi.py
deepcom/: apps.py  models.py  serializers.py  urls.py  views.py
deepcom/controllers/Parameters/: ParametersController.py  add_parameters.py  get_parameters.py  update_parameters.py  utils.py
deepcom/controllers/Video/: VideoController.py  check_status.py  get_contours.py  get_data.py  list_available.py  process.py  process_frame.py  stop_processing.py
deepcom/controllers/process_video/: post.py  process.py
deepcom/controllers/processed_video/: get.py
deepcom/controllers/videos/: check_status.py  get.py  get_available.py
deepcom/custom_models/: Events.py  processing_parameters.py
deepcom/migrations/: 0001_initial.py  0002_auto_20220630_2123.py  0002_processedvideo_delete_particledata.py  0002_videomodel_frame_rate.py  0003_auto_20220613_0030.py  0003_auto_20220630_2248.py  0004_videomodel_status.py
deepcom/services/: ParametersService.py  VideoService.py  utils.py  videos.py
static/assets/: index.01da66e1.js  index.28c18468.js  index.302ee769.js  index.578bf21f.css  index.578bf21f.js  index.a9a8f3ec.js  index.c164f0b3.css  index.c22e3b3f.js
static/assets/assets/: index.28c18468.js
static/videos/: README.md
