[tool.poetry]
name = "DeepView"
version = "0.1.0"
description = "DeepView project's web server"
authors = ["Miguel Martín <alu0101209777@ull.edu.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djongo = "*"
pymongo = "==3.12.1"
scipy = "*"
whitenoise = "*"
django = {git = "https://github.com/miguel-martinr/django.git", branch = "main"}
django-cors-headers = "*"
deepviewcore = "0.1.8"

[tool.poetry.dev-dependencies]
autopep8 = "*"  

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
